# rust_server

./: .env  docker-compose.yml
db/: init.sql
src/api/: Cargo.toml
src/api/src/: action.rs  auth.rs  db.rs  main.rs  model.rs  schema.rs
src/api/templates/: index.html
src/migration/: Cargo.toml  Dockerfile
src/migration/migrations/2022-10-17-071119_create_users/: up.sql
src/migration/src/: schema.rs
