[package]
name = "rust_api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "^0.6.3"
actix-identity = "0.5.2"
actix-session = { version = "0.7", features = ["redis-rs-session"] }

env_logger = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# chrono = { version = "0.4.22", features = ["serde"] }
# diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
uuid = { version = "1", features = ["serde", "v4"] }
r2d2 = "0.8"
anyhow = "1.0"

askama = "0.11"

[dev-dependencies]
actix-test = "0.1.0-beta.11"
time = "0.3.7"
